--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "~41.0.1",
     "expo-constants": "^10.1.3",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
