--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "expo": "~41.0.1",
     "expo-constants": "^10.1.3",
+    "expo-image-picker": "~10.1.4",
+    "expo-permissions": "~12.0.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.1.4",
     "react": "16.13.1",
