--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "~41.0.1",
     "expo-constants": "^10.1.3",
     "expo-image-picker": "~10.1.4",
+    "expo-location": "~12.0.4",
     "expo-permissions": "~12.0.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.1.4",
@@ -18,6 +21,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "yup": "^0.32.11"
   },
